# hatch-minify

./: README.md  pyproject.toml
src/hatch_minify/: hooks.py  plugin.py
tests/: conftest.py  test_hooks.py  test_plugin.py
